--- a/etch_a_sketch.html
+++ b/etch_a_sketch.html
@@ -7,6 +7,9 @@
     <script src="apps.js" defer></script>
     <link href="reset.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <div id="page">
@@ -16,8 +19,18 @@
           </div>
       </div>
       <div id="options">
-          <button class="eraser">Eraser</button><br>
-          <button class="clear">Clear</button>
+         <div class="button-container">
+            <button class="custom">Custom</button><br>
+            <button class="rainbow">Rainbow</button><br>
+            <button class="shading">Shading</button><br>
+            <button class="eraser">Eraser</button><br>
+            <button class="clear">Clear</button>
+        </div>
+        <div class="slidecontainer">
+          <p>Choose a grid</p>
+          <input type="range" min="1" max="64" value="16" class="slider" id="myRange">
+          <p id="dimensions-output"></p>
+        </div>
       </div>
       <footer id="footer">this is footer</footer>
   </body>
