Created an eventlistener that changes the grid dwhen we move the slider, fixed shader pen and added warm pen and started working on the ui more

--- a/etch_a_sketch.html
+++ b/etch_a_sketch.html
@@ -13,7 +13,8 @@
   </head>
   <body>
     <div id="page">
-      <header id="title">Etch a Sketch</header>
+      <div id="pink-line"></div>
+      <header id="header">Etch a Sketch</header>
       <div id="grid-container">
           <div id="grid">
           </div>
@@ -22,6 +23,7 @@
          <div class="button-container">
             <button class="custom">Custom</button><br>
             <button class="rainbow">Rainbow</button><br>
+            <button class="warm">Warm</button>
             <button class="shading">Shading</button><br>
             <button class="eraser">Eraser</button><br>
             <button class="clear">Clear</button>
