--- a/etch_a_sketch.html
+++ b/etch_a_sketch.html
@@ -13,7 +13,6 @@
   </head>
   <body>
     <div id="page">
-      <div id="pink-line"></div>
       <header id="header">Etch a Sketch</header>
       <div id="grid-container">
           <div id="grid">
@@ -21,11 +20,11 @@
       </div>
       <div id="options">
          <div class="button-container">
-            <button class="custom">Custom</button><br>
-            <button class="rainbow">Rainbow</button><br>
+            <button class="custom">Custom</button>
+            <button class="rainbow">Rainbow</button>
             <button class="warm">Warm</button>
-            <button class="shading">Shading</button><br>
-            <button class="eraser">Eraser</button><br>
+            <button class="shading">Shading</button>
+            <button class="eraser">Eraser</button>
             <button class="clear">Clear</button>
         </div>
         <div class="slidecontainer">
@@ -34,6 +33,6 @@
           <p id="dimensions-output"></p>
         </div>
       </div>
-      <footer id="footer">this is footer</footer>
+      <footer id="footer">jawciu</footer>
   </body>
 </html>
