Added media queries for portrait ipads

--- a/etch_a_sketch.html
+++ b/etch_a_sketch.html
@@ -10,10 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/12f8aa1234.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="page">
-      <img src="title.png" id="header" alt="Etch-a-sketch">
+      <div id="header">
+        <img src="title.png"  alt="Etch-a-sketch" id="img-title">
+      </div>
       <div id="grid-container">
           <div id="grid"></div>
       </div>
@@ -35,6 +38,6 @@
             
       </div>
       </div>
-      <footer id="footer">jawciu</footer>
+      <footer id="footer"><i class="fab fa-github fa-fw"></i>jawciu</footer>
   </body>
 </html>
